actions/govbot/tests/snapshots/cli_example_snaps__snapshot@govbot_help.snap
---
source: tests/cli_example_snaps.rs
expression: "&formatted_stdout"
---
Command:
govbot

Output:
Available commands:
  clone   Clone or pull data pipeline repositories (default: all locales)
  delete  Delete data pipeline repositories (use 'delete all' to delete all)
  logs    Process and display pipeline log files
  load    Load bill metadata into a DuckDB database file
