actions/govbot/tests/snapshots/cli_example_snaps__snapshot@logs_join_none_stderr.snap
---
source: tests/cli_example_snaps.rs
expression: "&stderr"
---
Warning: Unknown join dataset: none
Warning: Unknown join dataset: none
Warning: Unknown join dataset: none
Warning: Unknown join dataset: none
Warning: Unknown join dataset: none
Warning: Unknown join dataset: none
Warning: Unknown join dataset: none
Warning: Unknown join dataset: none
