actions/govbot/tests/snapshots/cli_example_snaps__snapshot@logs_repos_filter_stderr.snap
---
source: tests/cli_example_snaps.rs
expression: "&stderr"
---
Warning: Repository not found: /home/user/toolkit/actions/govbot/mocks/.govbot/repos/wy-data-pipeline
