actions/govbot/tests/snapshots/cli_example_snaps__stdout@govbot_help_stdout.snap
---
source: tests/cli_example_snaps.rs
expression: "&formatted_stdout"
---
Command:
govbot

Output:
Available commands:
  logs    Process and display pipeline log files
